fix: modify styling on landing page to ensure 100% responsivness on mobile devices

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -134,17 +134,17 @@
 .bg-dots-pattern {
   background-image: radial-gradient(
     circle at center,
-    rgba(0, 0, 0, 0.3) 1px,
-    transparent 1px
+    rgba(0, 0, 0, 0.2) 0.75px,
+    transparent 0.75px
   );
-  background-size: 24px 24px;
+  background-size: 20px 20px;
   background-position: 0 0;
 }
 
 .dark .bg-dots-pattern {
   background-image: radial-gradient(
     circle at center,
-    rgba(255, 255, 255, 0.3) 1px,
-    transparent 1px
+    rgba(255, 255, 255, 0.2) 0.75px,
+    transparent 0.75px
   );
 }
